Goal and services done; added pong logo and better font

--- a/Game_Design_Document/Content/Vision_Statement.tex
+++ b/Game_Design_Document/Content/Vision_Statement.tex
@@ -8,13 +8,11 @@ This artifact, called the Broom, is stored into a crumbling secret laboratory; e
 
 The ways to get to the Broom are many: you can completely avoid the other scavengers, actively fight them, mislead them in their search or even cooperate with them if they're willing... only to stab them in their backs whenever they least expect it. \\
 
-Only the strongest will be able to retrieve the artifact and escape the crumbling ruins of the secret laboratory in which it is stored, so players will need to plan ahead and think carefully about how to explore the perilous maze. \\
+Only the strongest will be able to retrieve the artifact and escape the crumbling ruins of the secret laboratory in which it is stored, so players will need to plan ahead and think carefully about how to explore the perilous maze.
 
 \subsection{Logline}
 
 \textit{Solve the puzzles and grab the Broom || Get lost in spiraling madness.}
-
-\pagebreak 
 
 \subsection{Look and Feel}
 
@@ -35,6 +33,8 @@ Each room of the lab complex has its own style for the player to better identify
 
 The musical accompaniment features synthwave music for both soundtrack and sound effects.
 
+\clearpage 
+
 \subsection{Gameplay Synopsis}
 
 The game starts with all the players together in the middle room of the lab complex. All the other rooms are
@@ -47,6 +47,4 @@ then all the chosen actions will happen one after the other following the player
 
 Most of the rooms can have effects on the player characters, some positive and some negative. In the former case, the positive effect is only applied if the player in that room manages to solve the puzzle. In the latter, the negative effect is only applied if the player in that room fails to solve the puzzle. All puzzles have a timer to ensure that the game proceeds. If the timer reaches zero, the puzzle is considered failed. 
 
-
-\pagebreak
 \clearpage 
