--- a/Game_Design_Document/Packages.tex
+++ b/Game_Design_Document/Packages.tex
@@ -15,6 +15,7 @@
 \usepackage{booktabs,tabularx}
 \usepackage{titlesec}
 \usepackage{longtable}
+\usepackage[default]{lato}
 
 \titleformat{\section}
   {\normalfont\LARGE\bfseries}{\thesection}{1em}{}[{\titlerule[0.8pt]}]
@@ -28,7 +29,8 @@
 	{
 	\fancyhf{}% Clear header/footer
 	\fancyhead[R]{Dying Hamsters - Game Design Document}% Right header
-	\fancyhead[L]{\includegraphics[width=2cm]{../Pictures/Unimi_logo.png}}% Left header
+	\fancyhead[L]{\includegraphics[width=2cm]{../Pictures/Unimi_logo.png}
+					\includegraphics[width=2cm]{../Pictures/pong_logo.png}}% Left header
 	\fancyfoot[R]{\thepage}% Right footer
 	}
 \pagestyle{plain}% Set page style to plain.
