--- a/Technical_Design_Document/Content/Provided_services.tex
+++ b/Technical_Design_Document/Content/Provided_services.tex
@@ -1,5 +1,12 @@
 \section{Provided Services}
 
-E.g., Customer support, forum, grocery delivery, car washing, paycheck advance
+To enhance the player experience, we will provide additional services for our users:
+
+\begin{itemize}
+	\item A website, in which we'll host the Web version of the game, alongside various information about it and a section for customer support and inquiries
+	\item An official Discord server to host discussion between players, making announcements and basic customer support
+	\item A Twitter page, as an alternative and public channel for announcements and upcoming content reveal
+	\item Leaderboards, achievements and stats
+\end{itemize}
 
 \pagebreak 
