--- a/Technical_Design_Document/Content/Staff/Management.tex
+++ b/Technical_Design_Document/Content/Staff/Management.tex
@@ -1,5 +1,5 @@
 \subsection{Infrastructure Management}
 
-infra management
-
-\pagebreak 
+\begin{itemize}
+	\item TODO Dipende dall'infrastruttura scelta
+\end{itemize}
