--- a/Technical_Design_Document/Content/Project_goal.tex
+++ b/Technical_Design_Document/Content/Project_goal.tex
@@ -1,6 +1,3 @@
 \section{Project Goal}
 
-Describe here what you want to provide to your customers/players from a technology standpoint.
-E.g., 7/24 game availability for mobile platforms running Symbian 1.0 and connecting via intra-satellite photonic link for a gesture-based MUD.
-
-\pagebreak 
+Our goal is to provide 24/7 game availability for players from both PC, Web Browser and Android (TODO with possibility of crossplay?) through an internet connection.
