--- a/Technical_Design_Document/Content/Staff/Ingame.tex
+++ b/Technical_Design_Document/Content/Staff/Ingame.tex
@@ -1,5 +1,9 @@
 \subsection{Ingame}
 
-ingame staff
+To develop our game we will employ:
 
-\pagebreak 
+\begin{itemize}
+	\item Three Game Designers which will also take the role of Game Developers 
+	\item A 2D Artist to create sprites and other visual assets for our game
+	\item A Music Artist to give shape to the soundtrack and the sound effects in our game
+\end{itemize}
