--- a/Technical_Design_Document/Content/Staff/Other.tex
+++ b/Technical_Design_Document/Content/Staff/Other.tex
@@ -1,5 +1,9 @@
 \subsection{Other}
 
-other staff
+We will also hire:
 
-\pagebreak 
+\begin{itemize}
+	\item A Web Developer to setup and maintain the main site for our game
+	\item A Social Media Manager to handle the Twitter account of our game, in order to create content, increase player's engagement and attract new possible customers
+	\item A Community Manager to moderate the Discord channel and interact with the community 
+\end{itemize}
