--- a/Technical_Design_Document/Content/Staff/Setup.tex
+++ b/Technical_Design_Document/Content/Staff/Setup.tex
@@ -1,5 +1,5 @@
 \subsection{Infrastructure Setup}
 
-infrastructure setup
-
-\pagebreak 
+\begin{itemize}
+	\item TODO Dipende dall'infrastruttura scelta
+\end{itemize}
