Added General Architecture section

--- a/Technical_Design_Document/Technical_Design_Document.tex
+++ b/Technical_Design_Document/Technical_Design_Document.tex
@@ -13,7 +13,7 @@
 \input{Content/Provided_services}
 \input{Content/Client}
 \input{Content/Workload_estimation}
-%\input{Content/General_architecture}
+\input{Content/General_architecture}
 \input{Content/Development}
 %\input{Content/External_services}
 %\input{Content/Connection}
