--- a/Technical_Design_Document/Technical_Design_Document.tex
+++ b/Technical_Design_Document/Technical_Design_Document.tex
@@ -16,8 +16,8 @@
 \input{Content/General_architecture}
 \input{Content/Development}
 %\input{Content/External_services}
-%\input{Content/Connection}
-%\input{Content/Delivery}
+\input{Content/Connection}
+\input{Content/Delivery}
 \input{Content/Staff}
 \input{Content/Location}
 %\input{Content/Cost_estimation}
