--- a/Technical_Design_Document/Content/General_architecture/Frontend.tex
+++ b/Technical_Design_Document/Content/General_architecture/Frontend.tex
@@ -1,24 +1,37 @@
 \subsection{Frontend}
-For the front end we decided to use Steam with Steamworks API \footnote{https://partner.steamgames.com/doc/api} and have a custom website, which will also run the HTML5 version of the game, held using Amazon Web Services.\\
-Since we distribute our game through Steam we will use some of their features like:
+For the frontend we decided to use Steam with Steamworks API \footnote{https://partner.steamgames.com/doc/api} for the PC version of the game. Moreover, we decided to use Google Play Service with Google APIs for the frontend of the mobile version of the game and have a custom website, which will also run the HTML5 version of the game, held using Amazon Web Services.\\
+Since we distribute our game through Steam and Google Play Service we will use some of their features like:
 \begin{itemize}
 \item Authentication
 \item Achievements tracking
 \item Leaderboards
 \item Friends Invitation
-\item Matchmaking
 \item Patch downloads
 \item Payments for in-game purchase
 \end{itemize}
-We will also rely on AWS for both Frontend and Backend because of the use of Amazon GameOn \footnote{https://developer.amazon.com/it/blogs/appstore/post/226f8a6f-ab31-437b-af91-4416e88f019a/yoyo-games-introduces-the-amazon-gameon-plugin-for-gamemaker-studio-2} plugin APIs that will allow us to create cross-platforms competition and tournaments.\\
+For the Matchmaking part of the game we will rely on AWS GameLift FlexMatch \footnote{https://docs.aws.amazon.com/gamelift/latest/flexmatchguide/match-intro.html} . We will also rely on AWS for both Frontend and Backend because of the use of Amazon GameOn \footnote{https://developer.amazon.com/it/blogs/appstore/post/226f8a6f-ab31-437b-af91-4416e88f019a/yoyo-games-introduces-the-amazon-gameon-plugin-for-gamemaker-studio-2} plugin APIs that will allow us to create cross-platforms competition and tournaments.\\
  
 \subsubsection{Hardware}
-For the Steam part of our front-end, the work is delegating to Steam and it's not necessary to use special hardware or software for that.\\
+For the Steam part and the Google Play Service part of our front-end, the work is delegated and it's not necessary to use special hardware or software for that.\\
+There will be a one time \textbf{80€} cost for the Steam submission fee and a one time \textbf{20€} cost for the Google Play Service submission fee.\\
 Our website platform, instead, will require dedicated hardware using AWS. Since our platform will be medium-weight, we decided to use a t2.medium instance \footnote{https://aws.amazon.com/it/ec2/instance-types/} of Amazon EC2 service to handle the standard website traffic and the game traffic generated when playing through browser.\\
 We decided to rely on T2 instances because they can expand their performances based on the workload (using CPU credit system) and have the possibility to temporary overcome the base CPU performance given.\\
 Website and web applications are the most suitable tasks for those type of EC2 instances.\\
 \\
-\textbf{TODO}: INSERIRE TABELLA PREZZI
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+\textit{Service} & \textit{Location} & \textit{Memory} & \textit{vCPUs} & \textit{Network Perf.} & \textit{Storage} & \textit{On-Demand cost/h}\\
+\hline
+t2.medium &	\textbf{EU (Frankfurt)} & 4GiB &	2 &	Low/Moderate & EBS only & 0.044 €\\
+\hline
+\end{tabular}
+\\\\\\
+\begin{tabular}{lcr}
+Amazon Elastic Block Storage (EBS)/monthly  & 18.90€ + VAT \\
+Amazon EC2 t2.medium on demand/monthly & 73.35€ + VAT \\
+\hline
+\textbf{Total Monthly cost} & 92.25€ + VAT = \textbf{110.70€}
+\end{tabular}
 \\
 \subsubsection{Software}
 We will use an Apache Web Server that will be set up in Amazon EC2 instance. The server will be managed using AWS Elastic Beanstalk which will allow us to quickly deploy and manage application in AWS Cloud. We will use Elastic Beanstalk \footnote{https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/Welcome.html} web interface for application health monitoring and automatic scaling based on our needs.
