Added labels to some sections referenced in the cost estimation, added labels to tplayer charts in the workload estimation section, almost completed Cost estimation section

--- a/Game_Design_Document/Content/Gameplay/Game_Mechanics/Rooms.tex
+++ b/Game_Design_Document/Content/Gameplay/Game_Mechanics/Rooms.tex
@@ -165,13 +165,13 @@ Check the Puzzles section for an in-depth explanation of individual puzzles.
 	\item When a Character is in the room its Player must buy a DLC in order to proceed in the game.
 \end{itemize}
 
-//Leave emtpy for quick copy-paste for future rooms :) //TODO remove when documentation is done
-\paragraph{} 
-\begin{itemize}
-	\item This Room's Puzzle is \textbf{TODO}.
-	\item When a Character is in the room .
-	\item If the Player succeeds in the Minigame, his Character is \textbf{}.
-	\item If the Player fails    in the Minigame, his Character is \textbf{}.
-\end{itemize}
+%Leave emtpy for quick copy-paste for future rooms :) //TODO remove when documentation is done
+%\paragraph{} 
+%\begin{itemize}
+%	\item This Room's Puzzle is \textbf{TODO}.
+%	\item When a Character is in the room .
+%	\item If the Player succeeds in the Minigame, his Character is \textbf{}.
+%	\item If the Player fails    in the Minigame, his Character is \textbf{}.
+%\end{itemize}
 
 \pagebreak
