--- a/Technical_Design_Document/Content/Delivery.tex
+++ b/Technical_Design_Document/Content/Delivery.tex
@@ -6,17 +6,22 @@ The Android version of the game will be delivered through the Google App Store.
 The HTML    version of the game will be available in a dedicated page within our website.
 
 \subsection{Delivery Methodology}
-Both Steam and the Google App Store are used to sell the game for a starting price of TODO €, advertisement-free. We take advantage of those platforms to manage users login and to associate achievements to an user. A game account from one platform can be linked to the user in the other platform. When this happens, the obtained achievements are shown on both platforms. 
+Steam is used to sell the game for a starting price of TODO €, advertisement-free.
+The Android version is available for free through the Google App Store with advertisements, but an in-app purchase to prevent the advertisements.
+We take advantage of those platforms to manage users login and to associate achievements to an user. A game account from one platform can be linked to the user in the other platform. When this happens, the obtained achievements are shown on both platforms. 
 
 % https://stackoverflow.com/questions/36200085/in-app-purchases-share-user-in-app-purchases-between-android-and-ios the following paragraph should be legal, maybe *wink*
 
-We also take advantage of the platoforms in-app purchase API to manage the purchase of cosmetics. Buying cosmetics in one platform will make them available in both PC and Android clients for the same account.
+We also take advantage of the platforms in-app purchase API to manage the purchase of cosmetics. Buying cosmetics in one platform will make them available in both PC and Android clients for the same account.
 
 The HTML version in our website will be playable for free and without an account. 
 There's no login required and no way to keep track of users achievements.
 
-In the HTML client there will be a fullscreen advertisement before each match, plus an advertisement will play every time the player is in a room without a puzzle while the other players are completing their own puzzles.
+In the HTML client there will be advertisements.
 
 All the 3 clients can host private matches and share an "invitation" keyword to invite friends to play. Crossplay is available across all clients.
+
+The clients with advertisements behave as follows:
+A fullscreen advertisement before each match, plus an advertisement will play every time the player is in a room without a puzzle while the other players are completing their own puzzles.
 
 \pagebreak 
