--- a/Technical_Design_Document/Content/Development/Hardware.tex
+++ b/Technical_Design_Document/Content/Development/Hardware.tex
@@ -1,9 +1,11 @@
 \subsection{Hardware}
+\label{section:Development_hardware}
+
 Note: The pricing is based on prices at date 24/05/2021.
 
 \textbf{Development computers:}
 
-\href{https://it.pcpartpicker.com/list/jLBgW3}{https:\/\/it.pcpartpicker.com\/list\/jLBgW3}
+https:/it.pcpartpicker.com/list/jLBgW3
 
 \begin{tabular}{|l|l|r|}
 	\hline
