--- a/Technical_Design_Document/Content/Development/Software.tex
+++ b/Technical_Design_Document/Content/Development/Software.tex
@@ -1,4 +1,5 @@
 \subsection{Software}
+\label{section:Development_software}
 Note: The pricing is based on prices at date 24/05/2021.
 
 Node: Game Maker Studio 2 licenses are valid for concurrent usage on up to 3 devices.
