--- a/Technical_Design_Document/Content/General_architecture/Backend.tex
+++ b/Technical_Design_Document/Content/General_architecture/Backend.tex
@@ -5,6 +5,7 @@ Amazon DynamoDB \footnote{https://aws.amazon.com/it/dynamodb/} is a NoSQL servic
 DynamoDB has no operative cost if paired with other AWS services, so it's the most complete option for our system that heavely relies on Amazon Web Services.\\
 Moreover, it supports global database tables, to allow developers to expand game borders to other regions.
 \subsubsection{Hardware}
+\label{section:backend_hardware}
 For the main Game Server we have chosen a c4.xlarge instance \footnote{https://aws.amazon.com/it/ec2/instance-types/} that have a better cost/computational power ratio providing us the right amount of resources needed.\\
 In order to grant the best coverage and performances we wanted to use 3 Game Servers located in North America, Europe, Asia.
 \\
