--- a/Technical_Design_Document/Packages.tex
+++ b/Technical_Design_Document/Packages.tex
@@ -15,8 +15,9 @@
 \usepackage{booktabs,tabularx}
 \usepackage{titlesec}
 \usepackage{longtable}
-\usepackage{hyperref}
 \usepackage[default]{lato}
+\usepackage{hyperref}
+\usepackage{verbatimbox}
 
 \titleformat{\section}
   {\normalfont\LARGE\bfseries}{\thesection}{1em}{}[{\titlerule[0.8pt]}]
