--- a/Technical_Design_Document/Technical_Design_Document.tex
+++ b/Technical_Design_Document/Technical_Design_Document.tex
@@ -20,7 +20,7 @@
 \input{Content/Delivery}
 \input{Content/Staff}
 \input{Content/Location}
-%\input{Content/Cost_estimation}
+\input{Content/Cost_estimation}
 
 
 
