--- a/Technical_Design_Document/Content/Workload_estimation.tex
+++ b/Technical_Design_Document/Content/Workload_estimation.tex
@@ -4,6 +4,9 @@ We can't take a game like AmongUs as reference, despite the similarities, since 
 
 RISK: Global Domination has an average of 1600-1700 players connected at the same time, with highly variable peaks, between 3000 and 10000+ players.
 
+\fullwidthgraphicscaption{../Pictures/Workload/AmongUs_players_chart.png}{AmongUs players chart}
+\fullwidthgraphicscaption{../Pictures/Workload/Risk_players_chart.png}{RISK: Global Domination players chart}
+
 The turn-based nature of the game makes it use very little resources; the network is only used intensively to prevent cheating in some minigames, which are treated as single-player experiences and need no further synchronization with other clients.
 Aside for minigames, networking operations and computation are minimal on both the client and the server side.
 The servers will have to keep track of currency, highscores and end-game statistics, and purchased cosmetics for each player. Ultimately it's again a negligible amount of data per each player. 50KB should suffice with enough overhead for future content.
