--- a/Game_Design_Document/Content/Story.tex
+++ b/Game_Design_Document/Content/Story.tex
@@ -19,7 +19,8 @@ Nonetheless, everyone looks blinded by greed, shoving and pushing everything in 
 
 The story will be told visually, using a cut-scene when registering into the game, before choosing your avatar class.\\
 
-\subsection{Story Board}
-\textbf{TODO}: insert story board
+\pagebreak
 
-\pagebreak 
+\subsection{Story Board}
+
+\includegraphics[height=\textwidth, angle=-90, origin=c]{../Pictures/Concept/Storyboard.png}
