Done staff and location

--- a/Technical_Design_Document/Content/Cost_estimation.tex
+++ b/Technical_Design_Document/Content/Cost_estimation.tex
@@ -102,15 +102,16 @@ TODO @Dige missing €
 \subsection{Location}
 See section \ref{section:location}
 
-\addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | r | r | r | }
+\addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | r | r | }
 	\hline
-	                     & Count & Months & Cost/Mo  & TOT \\
+	                     & Months & Cost/Mo  & TOT \\
 	\hline
-	Rent                 &       &        &          &    € \\
-	Fees and costs       &       &        &          &    € \\
-	Cleaning             &       &        &          &    € \\
+	Rent              &   12      &          &    € \\
+	Cleaning       &   12       &          &    € \\
+	Electricity, heating       &    12     &          &    € \\
+	Internet plan   &    12     &        &       € \\
 	\hline                                                
-	\textbf{Total}       &       &        &          &    € \\
+	\textbf{Total}       &       &        &       € \\
 	\hline
 	
 \end{tabular}}
