--- a/Technical_Design_Document/Content/Location.tex
+++ b/Technical_Design_Document/Content/Location.tex
@@ -1,7 +1,27 @@
 \section{Location}
 \label{section:location}
 
+\subsection{Monthly expenses}
+For the development of the game we will need enough space to host the members of the staff that need in person coordination the most, which are: the 3 game designers/developers, the AWS developer, the web developer and the 2D artist. For this reason we will choose an office with at least 70mq, which should give enough room to everyone including the playtesters when they'll come to test our game on site. \\
+We found that we can get a reasonable price of about 10\texteuro/mq in the city of Trento because TODO Mike insert reason why Trento good. \\\\
+In addition to that we have to also consider:
+\begin{itemize}
+	\item Cleaning costs
+	\item Electricity and heating
+	\item Landline + Internet plan
+\end{itemize}
 
-Everything needed in your workplace
+\subsection{Furniture}
+
+To make our office livable and to suit our needs we will buy some furniture and additional hardware such as:
+\begin{itemize}
+	\item Office chairs 
+	\item Desks
+	\item Printer, toner and printing paper
+	\item Whiteboard and markers
+	\item Landline telephone receiver
+	\item Microwave oven
+	\item Fridge
+\end{itemize} 
 
 \pagebreak 
