Added global infrastructure image and adjusted that section

--- a/Technical_Design_Document/Content/Connection.tex
+++ b/Technical_Design_Document/Content/Connection.tex
@@ -1,8 +1,8 @@
 \section{Connection}
-
 \subsection{Global Infrastructure}
-TODO
-
+  ~\\
+\fullwidthgraphicscaption{../Pictures/Network/Network_Scheme.jpg}{Network Infrastructure}
+\pagebreak 
 \subsection{Network Requirements}
 
 \subsubsection{Outside}
@@ -16,12 +16,12 @@ Bandwith: 1Kbit/s should be more than enough fur a full lobby. In the worst case
 
 
 \subsubsection{Inside}
-TODO
+TODO: Che sarebbe? Maybe cancellarla se non serve
 
 \subsection{Network Hardware}
-TODO
+Relying on the services offered by renting machines using AWS, it isn’t necessary to manage the hardware physically. Amazon Web Services guarantee remote access to those machines using AWS Elastic Beanstalk software.
 
 \subsection{Network Software}
-TODO
+No additional specialized software is required for our network.
 
 \pagebreak 
