--- a/Technical_Design_Document/Content/Staff/Infrastructure.tex
+++ b/Technical_Design_Document/Content/Staff/Infrastructure.tex
@@ -1,3 +1,11 @@
-\subsection{Infrastructure}
+﻿\subsection{Infrastructure}
 
 An AWS developer will be hired to setup the required the infrastructure needed by the game and mantain it throughout its lifespan.
+
+\addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | r | r | r | }
+	\hline
+	                     & Count &  Cost & Amount & TOT \\
+	\hline
+	AWS Developer     & 1    & 2800.00€/month  & 8 months & 22400.00€ \\
+	\hline
+\end{tabular}}
