--- a/Technical_Design_Document/Content/Staff/Other.tex
+++ b/Technical_Design_Document/Content/Staff/Other.tex
@@ -1,9 +1,26 @@
-\subsection{Other}
+﻿\subsection{Other}
 
 We will also hire:
 
 \begin{itemize}
-	\item A Web Developer to setup and maintain the main site for our game
-	\item A Social Media Manager to handle the Twitter account of our game, in order to create content, increase player's engagement and attract new possible customers
-	\item A Community Manager to moderate the Discord channel and interact with the community 
+	\item A Web Developer to setup the main site for our game
+	\item A Social Media Manager to handle the Twitter account of our game, in order to create content, increase player's engagement and attract new possible customers through advertisements
+	\item Two Community Managers to moderate the Discord channel and interact with the community 
+	\item An accountant to manage financial issues
+	\item A legal assistant to handle legal matters such as EULA, privacy policy and so on.
 \end{itemize}
+
+\addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | r | r | r | }
+	\hline
+	                     & Count & Cost & Amount & TOT \\
+	\hline
+	Web Developer     & 1     & 2500€/month & 1 month    & 2500.00€ \\
+	Social Media Manager 		 & 1     & 1200/month & 4 months	 & 4800.00€ \\
+	Community Manager 		 & 2     & 1000€/month & 2 months	 & 4000.00€ \\
+	Accountant			 & 1     & 1500€/month & 8 months	 & 12000.00€ \\
+	\hline
+	Legal assistant	  & 1     & 25€/hour & 720 hours & 18000.00€ \\
+	\hline
+	\textbf{Total}       &       &        &          &       41300.00€ \\
+	\hline
+\end{tabular}}
