--- a/Technical_Design_Document/Content/Staff/Ingame.tex
+++ b/Technical_Design_Document/Content/Staff/Ingame.tex
@@ -1,4 +1,4 @@
-\subsection{Ingame}
+﻿\subsection{Ingame}
 
 To develop our game we will employ:
 
@@ -6,4 +6,19 @@ To develop our game we will employ:
 	\item Three Game Designers which will also take the role of Game Developers 
 	\item A 2D Artist to create sprites and other visual assets for our game
 	\item A Music Artist to give shape to the soundtrack and the sound effects in our game
+	\item Two testers to playtest our game prior the launch
 \end{itemize}
+
+\addvbuffer[10pt 10pt]{\begin{tabular}{ | l | r | r | r | r | }
+	\hline
+	                     & Count & Cost & Amount & TOT \\
+	\hline
+	Game Developer     & 3      & 2500€/month & 8 months    & 60000.00€ \\
+	Tester 			 & 2     & 1500€/month & 2 months	 & 6000.00€ \\
+	\hline
+	2D artist			 & 1     & 20€/asset &  500 assets	 & 10000.00€ \\
+	Music artist			 & 1     & 750€/minute &  15 minutes	 & 11250.00€ \\
+	\hline
+	\textbf{Total}       &       &        &          &       87250.00€ \\
+	\hline
+\end{tabular}}
